--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.13.3",
     "choreographer": "^0.3.0",
     "express": "^4.13.3",
+    "jspm": "^0.16.11",
     "mkdirp": "^0.5.1",
     "parse-torrent-name": "^0.5.4",
     "query-string": "^2.4.2"
