--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "choreographer": "^0.3.0",
     "express": "^4.13.3",
     "jspm": "^0.16.11",
+    "magnet-to-torrent": "0.0.9",
     "mkdirp": "^0.5.1",
     "parse-torrent-name": "^0.5.4",
-    "query-string": "^2.4.2"
+    "query-string": "^2.4.2",
+    "request": "^2.65.0"
   },
   "devDependencies": {},
   "scripts": {
@@ -29,6 +31,7 @@
       "angular": "github:angular/bower-angular@^1.4.7",
       "css": "github:systemjs/plugin-css@^0.1.18",
       "font-awesome": "npm:font-awesome@^4.4.0",
+      "lodash": "npm:lodash@^3.10.1",
       "normalize.css": "github:necolas/normalize.css@^3.0.3"
     },
     "devDependencies": {
