--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "configFile": "public/system.conf.js",
     "dependencies": {
       "angular": "github:angular/bower-angular@^1.4.7",
+      "bootstrap": "github:twbs/bootstrap@4.0.0-alpha",
+      "clean-css": "npm:clean-css@^3.4.6",
       "css": "github:systemjs/plugin-css@^0.1.18",
       "font-awesome": "npm:font-awesome@^4.4.0",
       "lodash": "npm:lodash@^3.10.1",
