--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
       "angular": "github:angular/bower-angular@^1.4.7",
       "bootstrap": "github:twbs/bootstrap@4.0.0-alpha",
+      "browser-request": "npm:browser-request@^0.3.3",
       "clean-css": "npm:clean-css@^3.4.6",
       "css": "github:systemjs/plugin-css@^0.1.18",
       "firebase": "github:firebase/firebase-bower@^2.3.2",
