--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,10 @@
     "lodash": "^4.0.0",
     "promise": "^7.1.1",
     "request": "^2.67.0",
-    "serverless-helpers-js": "~0.0.3"
+    "serverless-helpers-js": "~0.0.3",
+    "string-format": "^0.5.0",
+    "strmr-common": "git://github.com/crstffr/strmr-common.git",
+    "superagent": "^1.7.1",
+    "superagent-promise": "^1.1.0"
   }
 }
