--- a/front/package.json
+++ b/front/package.json
@@ -27,13 +27,18 @@
       "clean-css": "npm:clean-css@^3.4.6",
       "css": "github:systemjs/plugin-css@^0.1.18",
       "firebase": "github:firebase/firebase-bower@^2.3.2",
+      "html": "github:systemjs/plugin-text@^0.0.4",
       "lodash": "npm:lodash@^3.10.1",
       "normalize.css": "github:necolas/normalize.css@^3.0.3",
       "parse-torrent-name": "npm:parse-torrent-name@^0.5.4",
       "promise.prototype.finally": "npm:promise.prototype.finally@^1.0.1",
       "query-string": "npm:query-string@^3.0.0",
       "rpg": "npm:rpg@^0.1.0",
-      "store": "npm:store@^1.3.20"
+      "store": "npm:store@^1.3.20",
+      "string-format": "npm:string-format@^0.5.0",
+      "superagent": "npm:superagent@^1.7.1",
+      "superagent-promise": "npm:superagent-promise@^1.1.0",
+      "text": "github:systemjs/plugin-text@^0.0.4"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
