--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Serverless Project and its Serverless Plugin dependencies.",
   "author": "me",
   "license": "MIT",
-  "private": false,
+  "private": true,
   "repository": {
     "type": "git",
     "url": "git://github.com/"
