--- a/package.json
+++ b/package.json
@@ -9,5 +9,7 @@
     "type": "git",
     "url": "git://github.com/"
   },
-  "dependencies": {}
+  "dependencies": {
+    "firebase": "^2.4.0"
+  }
 }
