--- a/api/package.json
+++ b/api/package.json
@@ -15,8 +15,10 @@
     "firebase": "^2.4.0",
     "google-images": "^1.0.0",
     "lodash": "^4.0.0",
+    "pad": "^1.0.0",
     "promise": "^7.1.1",
     "request": "^2.67.0",
+    "rpg": "^0.1.0",
     "serverless-helpers-js": "~0.0.3",
     "string-format": "^0.5.0",
     "strmr-common": "git://github.com/crstffr/strmr-common.git",
