--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "url": "git://github.com/"
   },
   "dependencies": {
-    "firebase": "^2.4.0"
-  }
+    "serverless-optimizer-plugin": "^1.0.0"
+  },
+  "devDependencies": {}
 }
