--- a/front/package.json
+++ b/front/package.json
@@ -55,7 +55,8 @@
       "store": "npm:store@^1.3.20",
       "strmr-common": "github:crstffr/strmr-common@master",
       "text": "github:systemjs/plugin-text@^0.0.4",
-      "ui-router-extras": "github:christopherthielen/ui-router-extras@^0.1.0"
+      "ui-router-extras": "github:christopherthielen/ui-router-extras@^0.1.0",
+      "webtorrent": "npm:webtorrent@^0.74.2"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
